--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,12 @@
 
 .text{flex: 1; }
 
-.favorite{padding: 0 15px;}
+.favorite button{padding: 0 15px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    font-size: 20px;}
 
 .delete button{color: red;
         padding-right: 10px;
